--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "phpmailer/phpmailer": "^6.7"
     },
     "config": {
-        "vendor-dir": "_kernel/libs/"
+        "vendor-dir": "_Kernel/Libs/"
     },
     "autoload": {
         "psr-4": {"Modules\\": "Modules/"}
