--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
     "require": {
         "monolog/monolog": "^2.9",
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+        "cboden/ratchet": "^0.4.4"
     },
     "config": {
         "vendor-dir": "_Kernel/Libs/"
-    },
-    "autoload": {
-        "psr-4": {"Modules\\": "Modules/"}
     }
 }
