--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "framework/liloo",
     "description": "Framework PHP Liloo",
     "require": {
-        "monolog/monolog": "^2.9",
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+        "twig/twig": "^3.5"
     },
     "config": {
         "vendor-dir": "_Kernel/Libs/"
