--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,14 @@
     "require": {
         "phpmailer/phpmailer": "^6.7",
         "twig/twig": "^3.5",
-        "monolog/monolog": "^2.9"
+        "monolog/monolog": "^2.9",
+        "liloo/helpers": "^1.0"
     },
     "config": {
         "vendor-dir": "_Kernel/Libs/"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
