--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "phpmailer/phpmailer": "^6.7",
         "twig/twig": "^3.5",
         "monolog/monolog": "^2.9",
-        "liloo/libraries": "^1.2"
+        "liloo/libraries": "^1.2",
+        "mercadopago/dx-php": "^2.5"
     },
     "config": {
         "vendor-dir": "_Kernel/Libs/"
