Atualização do teme kitbusca

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
         "phpmailer/phpmailer": "^6.7",
         "twig/twig": "^3.5",
         "monolog/monolog": "^2.9",
-        "liloo/libraries": "^1.2",
         "mercadopago/dx-php": "^2.5",
-        "endroid/qr-code": "^4.6"
+        "endroid/qr-code": "^4.6",
+        "liloo/libraries": "^1.2"
     },
     "config": {
         "vendor-dir": "_Kernel/Libs/"
